# transaction_systems

./: CMakeLists.txt  README.md  build.sh
assignments/2/: assig2.tex
include/: SerializableTransaction.hpp
inputs/: input1  input2
src/: SerializableTransaction.cpp  main.cpp
